--- a/feature/firstScreen/src/main/res/layout/fragment_first.xml
+++ b/feature/firstScreen/src/main/res/layout/fragment_first.xml
@@ -24,4 +24,11 @@
         android:layout_height="wrap_content"
         android:text="Task"
         />
+
+    <Button
+        android:id="@+id/btnDeeplinkArgs"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Go to deeplink with args"
+        />
 </LinearLayout>
