--- a/feature/fourthscreen/src/main/res/layout/fragment_fourth.xml
+++ b/feature/fourthscreen/src/main/res/layout/fragment_fourth.xml
@@ -5,10 +5,24 @@
     android:layout_height="match_parent"
     tools:context=".FourthFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:orientation="vertical">
+
+        <Button
+            android:id="@+id/goToFF"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Go to First Fragment"/>
+
+        <Button
+            android:id="@+id/goToFFdl"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Go to First Fragment deeplink"/>
+
+
+    </LinearLayout>
 
 </FrameLayout>
